deploys/traefik/middlewares.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: edge-rate-limit
  namespace: lab-traefik
spec:
  rateLimit:
    average: 10
    burst: 15
    period: 1s
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: security-headers
  namespace: lab-traefik
spec:
  headers:
    customResponseHeaders:
      X-Frame-Options: "DENY"
      X-Content-Type-Options: "nosniff"
      X-XSS-Protection: "1; mode=block"
      X-Engineered-By: "Traefik-v3-Gateway-API"
      Strict-Transport-Security: "max-age=31536000; includeSubDomains"
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: edge-circuit-breaker
  namespace: lab-traefik
spec:
  circuitBreaker:
    expression: "LatencyAtQuantileMS(50.0) > 200 || NetworkErrorRatio() > 0.20"
