deploys/traefik/httproute-canary.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: traefik-backend-route
  namespace: lab-traefik
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: "lab-traefik-edge-rate-limit@kubernetescrd,lab-traefik-security-headers@kubernetescrd"
spec:
  parentRefs:
    - name: traefik-edge-gw
      sectionName: http
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api
      backendRefs:
        - name: backend-v1
          port: 8080
          weight: 90
        - name: backend-v2
          port: 8080
          weight: 10
